.gitignore 테스트 + index.html 수정(개행 제거, 주석 제거, 스타일 -> css폴더로 옮기기)

--- a/css/style.css
+++ b/css/style.css
@@ -50,3 +50,13 @@
   border-bottom-right-radius: 10px;
   border-bottom-left-radius: 10px;
 }
+#video, #canvas {
+  margin-left: 10%;
+  margin-top: 120px;
+  position: absolute;
+}
+#remoteVideo {
+  margin-left: 500px;
+  margin-top: 120px;
+  position: absolute;
+}
