--- a/Gyeony95/css/style.css
+++ b/Gyeony95/css/style.css
@@ -32,7 +32,7 @@
   position: fixed;
   top: 50%;
   left: 50%;
-  margin: -329px 0 0 -429px;
+  margin: -50px 0 0 -429px;
   padding: 95px 20px 45px 34px;
   overflow: hidden;
   -webkit-box-sizing: border-box;
@@ -51,16 +51,12 @@
   border-bottom-left-radius: 10px;
 }
 #video, #canvas {
-  margin-left: 10%;
-  margin-top: 120px;
+  margin-left: 25%;
+  margin-top: 20px;
   position: absolute;
 }
 #remoteVideo {
-  margin-left: 500px;
-  margin-top: 120px;
+  margin-right: 25%;
+  margin-top: 20px;
   position: absolute;
-<<<<<<< HEAD:css/style.css
 } 
-=======
-}
->>>>>>> make_ui_gihyeon:assets/css/style.css
